--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,6 @@
 $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 @import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
-
+@import 'https://fonts.googleapis.com/css?family=Satisfy|Proza+Libre';
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -8,4 +8,12 @@ $icon-font-path: '../../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 
 img {
   max-width: 100%;
+}
+
+body {
+  font-family: 'Proza Libre', serif;
+}
+
+h1 {
+  font-family: 'Satisfy', cursive;
 }
